test/e2e/testdata/cookie-based-session-persistence.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cookie-based-session-persistence
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - name: infra-backend-v1
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /v2
      backendRefs:
        - name: infra-backend-v1
          port: 8080
      sessionPersistence:
        sessionName: Session-A
        type: Cookie
        # Actually, absoluteTimeout is not necessary for Header based session persistence.
        # But, we have to add it, otherwise the gateway-api validation (mistakenly) rejects it.
        # https://github.com/kubernetes-sigs/gateway-api/issues/3214
        absoluteTimeout: 10s
